# scoreboard

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  config-win32.h  configure.ac
CppUnitLite/: Makefile.am  Test.h
model/: GameConfig.cpp  GameConfig.hpp  GameTime.cpp  GameTime.hpp  Interfaces.hpp  Makefile.am  TeamScore.cpp  TeamScore.hpp
nsis/: setup.nsi
test/: GameConfigTest.cpp  GameTimeTest.cpp  Makefile.am  TeamScoreTest.cpp  main.cpp
vstudio9.0/: RunNsis.bat  scoreboard.sln
vstudio9.0/CppUnitLite/: CppUnitLite.vcproj
vstudio9.0/ScoreboardModel/: ScoreboardModel.vcproj
vstudio9.0/ScoreboardTest/: ScoreboardTest.vcproj
vstudio9.0/ScoreboardWxWidget/: ScoreboardWxWidget.vcproj
wx/: GameConfigDatabase.cpp  GameConfigDatabase.hpp  GameConfigDialog.cpp  GameConfigDialog.hpp  GameControlPanel.cpp  GameControlPanel.hpp  GameTimePanel.cpp  GameTimePanel.hpp  LcdNumberWindow.cpp  LcdNumberWindow.hpp  Makefile.am  ScoreboardFrame.cpp  ScoreboardFrame.hpp  StaticTitlePanel.cpp  StaticTitlePanel.hpp  TeamScorePanel.cpp  TeamScorePanel.hpp  common.hpp  main.cpp  main.hpp  resource.h  scoreboard.rc  scoreboard.xpm
