# Process this file with automake to produce Makefile.in (in this,
# and all subdirectories).
# Makefile for the top-level directory of scoreboard
# 
# Copyright 2013 scoreboard <scoreboard@naver.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

ACLOCAL_AMFLAGS = -I m4 

# Subdirectories to descend into.
SUBDIRS = CppUnitLite model test wx

# Visual Studio 9.0
EXTRA_DIST = config-win32.h \
	vstudio9.0/scoreboard.sln \
	vstudio9.0/CppUnitLite/CppUnitLite.vcproj \
	vstudio9.0/ScoreboardModel/ScoreboardModel.vcproj \
	vstudio9.0/ScoreboardTest/ScoreboardTest.vcproj \
	vstudio9.0/ScoreboardWxWidget/ScoreboardWxWidget.vcproj
