# Process this file with automake to produce Makefile.in.
# Makefile.am for scoreboard/model.
#
# Copyright 2014 scoreboard (scoreboard@naver.com)
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

noinst_LIBRARIES = libscoreboardmodel.a
libscoreboardmodel_a_SOURCES = GameConfig.cpp GameTime.cpp TeamScore.cpp
noinst_HEADERS = Interfaces.hpp GameConfig.hpp GameTime.hpp TeamScore.hpp
libscoreboardmodel_a_CPPFLAGS = @CPPFLAGS@
libscoreboardmodel_a_CXXFLAGS = @CXXFLAGS@
